force-app/main/default/objects/Region_Suburb__c/Region_Suburb__c.object-meta.xml
<CustomObject>
    <label>Region - Suburb</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Region-Suburb Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region - Suburbs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>