force-app/main/default/objects/Region_Suburb__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <length>253</length>
    <type>Text</type>
</CustomField>