force-app/main/default/objects/Region_Suburb__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <label>Suburb</label>
    <length>253</length>
    <type>Text</type>
</CustomField>